<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robione_joy_adapter_autoware</name>
  <version>0.0.0</version>
  <description>robione_joy_adapter_autoware</description>
  <maintainer email="elaydin@robeff.com">elaydin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>


  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
